# advanced-sdk

./: README.md
examples/C#/: DotNetEmotivSDK.sln
examples/C#/EEG_Data_Logger/: EEG_Data_Logger.cs  EEG_Data_Logger.csproj
examples/C#/PerformanceMetric/: PerformanceMetric.csproj
examples/C++/: EmoTutorials.sln
examples/C++/EEGLogger/: CMakeLists.txt  EEGLogger.pro  EEGLogger.vcxproj  main.cpp
examples/C++/MultiDongleEEGLogger/: CMakeLists.txt  MultiDongleEEGLogger.pro  MultiDongleEEGLogger.vcxproj  main.cpp
examples/C++/MultilChannelEEGLogger/: CMakeLists.txt  MultilChannelEEGLogger.pro  MultilChannelEEGLogger.vcxproj  main.cpp
examples/C++/PerformanceMetricsDemo/: PerformanceMetricsDemo.cpp  PerformanceMetricsDemo.pro
examples/C++/qt-project/: EEG-examples.pro  MultiDongleEEGLogger.pro  MultilChannelEEGLogger.pro  deployment.pri
examples/Matlab/: eeglogger.m
examples/Python/: eeg_logger.py
